--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -16,9 +16,7 @@ on:
 jobs:
   dockerize:
     runs-on: ubuntu-latest
-    env:
-      IMAGE_TAG: ${{ inputs.image_tag }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -32,6 +30,11 @@ jobs:
           registry: ${{ inputs.registry }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Create .env file
+        run: |
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
+          echo "IMAGE_TAG=${{ inputs.image_tag }}" >> .env
 
       - name: Build and tag images with docker compose
         run: docker compose build
