--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -16,12 +16,20 @@ on:
 jobs:
   dockerize:
     runs-on: ubuntu-latest
-
+    env:
+      IMAGE_TAG: ${{ inputs.image_tag }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Install docker-compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
 
       - name: Log in to Docker registry
         if: ${{ inputs.registry != '' }}
@@ -31,13 +39,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Create .env file
-        run: |
-          echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
-          echo "IMAGE_TAG=${{ inputs.image_tag }}" >> .env
-
-      - name: Build and tag images with docker compose
-        run: docker compose build
+      - name: Build and tag images with docker-compose
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          IMAGE_TAG: ${{ inputs.image_tag }}
+        run: docker-compose build
 
       - name: Push images
-        run: docker compose push
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          IMAGE_TAG: ${{ inputs.image_tag }}
+        run: docker-compose push
