--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -25,12 +25,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Install docker-compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
       - name: Log in to Docker registry
         if: ${{ inputs.registry != '' }}
         uses: docker/login-action@v2
@@ -39,14 +33,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and tag images with docker-compose
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          IMAGE_TAG: ${{ inputs.image_tag }}
-        run: docker-compose build
+      - name: Build and tag images with docker compose
+        run: docker compose build
 
-      - name: Push images
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          IMAGE_TAG: ${{ inputs.image_tag }}
-        run: docker-compose push
+      - name: Push images to dockerhub
+        run: docker compose push
