--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: string
         default: ""
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
 
 jobs:
   dockerize:
