--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -7,11 +7,6 @@ on:
         description: "Docker image tag"
         required: true
         type: string
-      registry:
-        description: "Docker registry prefix (optional)"
-        required: false
-        type: string
-        default: ""
     secrets:
       DOCKER_USERNAME:
         required: true
@@ -30,19 +25,29 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker registry
-        if: ${{ inputs.registry != '' }}
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          registry: ${{ inputs.registry }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and tag images with docker compose
         run: docker compose build
 
+      - name: Echo docker username prefix
+        run: |
+          echo "::notice title=DOCKER_USERNAME::$DOCKER_USERNAME"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+
       - name: Show built image tags
         run: docker images
+
+      - name: Debug image names
+        run: |
+          export DOCKER_USERNAME="${{ secrets.DOCKER_USERNAME }}"
+          export IMAGE_TAG="${{ inputs.image_tag }}"
+          docker compose config | grep image
 
       - name: Push images to dockerhub
         run: docker compose push
