--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -24,8 +24,9 @@ jobs:
       terraform_dir: infra/terraform/env/dev
       ansible_dir: ansible
       inventory_file: infra/ansible/inventory/dev
-      ssh_key_secret: DEPLOY_SSH_KEY
+      ssh_key_secret:
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
