--- a/next-frontend/Dockerfile
+++ b/next-frontend/Dockerfile
@@ -1,21 +1,29 @@
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json for npm
 COPY package.json package-lock.json ./
 
-# Install dependencies with npm ci (clean install)
 RUN npm ci
 
-# Copy rest of the source code
 COPY . .
 
-# Build the Next.js app
 RUN npm run build
 
-# Expose default Next.js port
+# Production stage
+FROM node:18-alpine AS runner
+
+WORKDIR /app
+
+# Copy only production dependencies (node_modules) and build output
+COPY --from=builder /app/package.json /app/package-lock.json ./
+RUN npm ci --only=production
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.js ./
+
 EXPOSE 3000
 
-# Start the app
 CMD ["npm", "start"]
