--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -22,7 +22,7 @@ jobs:
     with:
       image_tag: ${{ github.sha }}
       terraform_dir: infra/terraform/env/dev
-      ansible_dir: ansible
+      ansible_dir: infra/ansible
       inventory_file: infra/ansible/inventory/dev
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
