--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -23,7 +23,7 @@ jobs:
       image_tag: ${{ github.sha }}
       terraform_dir: infra/terraform/env/dev
       ansible_dir: infra/ansible
-      inventory_file: infra/ansible/inventory/dev
+      inventory_file: inventory/dev
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
