--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -19,11 +19,11 @@
         mode: "0644"
 
     - name: Pull latest images
-      shell: docker-compose pull
+      shell: docker compose pull
       args:
         chdir: /home/ubuntu
 
     - name: Start services
-      shell: docker-compose up -d
+      shell: docker compose up -d
       args:
         chdir: /home/ubuntu
