--- a/spring-backend/docker-compose.yml
+++ b/spring-backend/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     environment:
       POSTGRES_DB: simbus-postgres
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
 
-      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
