--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -12,3 +12,6 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+# OneMap API token
+onemap.token=YOUR_ONEMAP_TOKEN_HERE
