feat(chatbot): add spring backend routing logic with onemap api [T5AD-56]
# Conflicts:
#	android-kotlin/gradle/libs.versions.toml
#	spring-backend/src/main/resources/application.properties.template

--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -6,7 +6,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/simbus-mongo
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/simbus-postgres
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
