--- a/android-kotlin/feature_chatbot/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_chatbot/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.feature_chatbot">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
     android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.BusAppKotlin">
         <activity
             android:name=".ui.MainActivity"
