fix: add files to previous commit that were unstaged

--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -6,12 +6,13 @@ spring.data.mongodb.uri=mongodb://localhost:27017/simbus-mongo
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/simbus-postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=root
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-# OneMap API token
-onemap.token=YOUR_ONEMAP_TOKEN_HERE
+# onemap api
+onemap.base-url=https://www.onemap.gov.sg
+onemap.token=<one-map-token-here>
