--- a/spring-backend/docker-compose.yml
+++ b/spring-backend/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_DB: simbus-postgres
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
 
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
