feat: add chatbot llm route points

--- a/android-kotlin/feature_chatbot/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_chatbot/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.feature_chatbot">
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,6 +14,10 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.BusAppKotlin">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCLiFrxaQiSMwsqwz2Che2lPXRNVnXVyXQ"/>
+
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
