feat(api): built unified endpoints  for bus stops and arrival for both LLM and nextbus llm [T5AD-38]

--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -15,4 +15,10 @@ spring.jpa.show-sql=true
 
 # onemap api
 onemap.base-url=https://www.onemap.gov.sg
-onemap.token=<one-map-token-here>
+onemap.token=<YOUR-Token>
+
+api.lta.baseurl=https://datamall2.mytransport.sg/ltaodataservice
+api.lta.key=<YOUR-Token>
+
+api.nus.baseurl=https://nnextbus.nus.edu.sg
+api.nus.auth=<YOUR-Token>
