--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -24,3 +24,6 @@ api.lta.key=<YOUR-Token>
 
 api.nus.baseurl=https://nnextbus.nus.edu.sg
 api.nus.auth=<YOUR-Token>
+
+# give more time for fast api to respond
+spring.mvc.async.request-timeout=90s
