feature(api): shifted to an entire web-flux reactive api instead of spring web

--- a/spring-backend/src/main/resources/application.properties.template
+++ b/spring-backend/src/main/resources/application.properties.template
@@ -8,14 +8,14 @@ spring.data.mongodb.uri=mongodb://localhost:27017/simbus-mongo
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/simbus-postgres
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-# OneMap Api Token (ask paul)
+# onemap api
 onemap.base-url=https://www.onemap.gov.sg
 onemap.token=<YOUR-Token>
 
