fix(): linked all android modules + fixed backend minor issues

--- a/android-kotlin/app/src/main/AndroidManifest.xml
+++ b/android-kotlin/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name="com.example.busappkotlin.NimbusApplication"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
