--- a/android-kotlin/feature_login/src/main/AndroidManifest.xml
+++ b/android-kotlin/feature_login/src/main/AndroidManifest.xml
@@ -8,16 +8,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.BusAppKotlin">
 
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN"/>-->
-<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
